docs/envoy/v1.15.0/_sources/api-v3/extensions/clusters/dynamic_forward_proxy/v3/cluster.proto.rst.txt
.. _envoy_v3_api_file_envoy/extensions/clusters/dynamic_forward_proxy/v3/cluster.proto:

Dynamic forward proxy cluster configuration
===========================================


.. _envoy_v3_api_msg_extensions.clusters.dynamic_forward_proxy.v3.ClusterConfig:

extensions.clusters.dynamic_forward_proxy.v3.ClusterConfig
----------------------------------------------------------

`[extensions.clusters.dynamic_forward_proxy.v3.ClusterConfig proto] <https://github.com/envoyproxy/envoy/blob/v1.15.0/api/envoy/extensions/clusters/dynamic_forward_proxy/v3/cluster.proto#L20>`_

Configuration for the dynamic forward proxy cluster. See the :ref:`architecture overview
<arch_overview_http_dynamic_forward_proxy>` for more information.

.. _extension_envoy.clusters.dynamic_forward_proxy:


This extension may be referenced by the qualified name *envoy.clusters.dynamic_forward_proxy*

.. note::
  

  This extension is intended to be robust against untrusted downstream traffic. It assumes that the upstream is trusted.

.. code-block:: json

  {
    "dns_cache_config": "{...}",
    "allow_insecure_cluster_options": "..."
  }

.. _envoy_v3_api_field_extensions.clusters.dynamic_forward_proxy.v3.ClusterConfig.dns_cache_config:

dns_cache_config
  (:ref:`extensions.common.dynamic_forward_proxy.v3.DnsCacheConfig <envoy_v3_api_msg_extensions.common.dynamic_forward_proxy.v3.DnsCacheConfig>`, *REQUIRED*) The DNS cache configuration that the cluster will attach to. Note this configuration must
  match that of associated :ref:`dynamic forward proxy HTTP filter configuration
  <envoy_v3_api_field_extensions.filters.http.dynamic_forward_proxy.v3.FilterConfig.dns_cache_config>`.
  
  
.. _envoy_v3_api_field_extensions.clusters.dynamic_forward_proxy.v3.ClusterConfig.allow_insecure_cluster_options:

allow_insecure_cluster_options
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) If true allow the cluster configuration to disable the auto_sni and auto_san_validation options
  in the :ref:`cluster's upstream_http_protocol_options
  <envoy_v3_api_field_config.cluster.v3.Cluster.upstream_http_protocol_options>`
  
  

